[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy-inspector-egui = "0.19.0"
bevy_reflect = "0.11.3"
egui = "0.22"
egui-gizmo = "0.11.0"
egui_dock = "0.6"
